# StageDGtal_v1

./: ATC_Computation_3D.h  AlphaThickSegment3D.h  AlphaThickSegment3D.ih  CMakeLists.txt  Display.h  analyses.py  curvature.h  function2.h  lambdaMST.h  main.cpp
AdaptiveTangentCover/: ATC_Computation.cpp  ATC_Computation.h  functions.cpp  functions.h  main.cpp
AdaptiveTangentCover/ImaGene/tests/TestCompNoiseDetect/: displayNoiseBS.cxx
AdaptiveTangentCover/Samples/: test2D.sdp
MainFunction/: ATC_3D.cpp  ATC_3D_2.cpp  AllSegmentations.cpp  TestDefintion.cpp  V1.cpp  tgtCover.cpp
Results/: Data.txt  XYMeanThickness_0.txt  XYMeanThickness_1.txt  XYMeanThickness_2.txt  XY_0.sdp  XY_1.sdp  XY_2.sdp  XY_curve.txt  helixMeanThickness_0.txt  helixMeanThickness_1.txt  helixMeanThickness_2.txt  helix_0.sdp  helix_1.sdp  helix_2.sdp  helix_curve.txt
Results/BNS/: test.txt
